# OpenBBC

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
aikdm/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  minierp.yaml  pyproject.toml
aikdm/aikdm/: agents.py  cli.py  config.py  loader.py  models.py  orchestrator.py  progress.py  rendering.py  schemas.py
aikdm/aikdm/eval/: judge.py  orchestrator.py  runner.py  schemas.py  simulator.py  target.py  tool_mock.py  tool_real.py
aikdm/aikdm/templates/: main_prompt.xml.j2  skill_prompt.xml.j2
aikdm/aikdm/train/: orchestrator.py  patcher.py  reporter.py  schemas.py  teacher.py
aikdm/schemas/: prompt-v1.yaml
aikdm/tests/: conftest.py
aikdm/tests/fixtures/: eval_input_minimal.yaml  train_input_minimal.yaml
aikdm/tests/fixtures/expected_bundles/: coffee_shop.yaml
aikdm/tests/fixtures/flow_map_config/: coffee_shop.yaml
aikdm/tests/integration/: test_cli.py  test_evaluate_cli.py  test_train_cli.py
aikdm/tests/smoke/: test_real_model.py
aikdm/tests/unit/: test_agents.py  test_config.py  test_judge.py  test_loader.py  test_models.py  test_orchestrator.py  test_progress.py  test_runner.py  test_schemas.py  test_smoke_toolchain.py  test_templates.py  test_tool_mock.py  test_tool_real.py  test_train_orchestrator.py  test_train_patcher.py  test_train_reporter.py  test_train_schemas.py
bbc-discovery/: .gitignore  README.md
bbc-discovery/.claude-plugin/: marketplace.json
bbc-discovery/flow-map-compiler/: README.md
cc-discovery/flow-map-compiler/: SKILL.md
docs/: ARCHITECTURE.md  DESIGN.md  PRODUCTION.md
docs/plans/: agent-architecture-split.md
open-bbcd/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
open-bbcd/migrations/: 001_create_agents.sql  002_create_resources.sql  003_add_agent_versioning.sql  004_add_agent_wizard_input.sql  (+22 more)
scripts/: e2e_seed_agent.sh  generate_alpha.sh  go.mod  process_pending_evals.sh  process_pending_trainings.sh  pyproject.toml  run_eval.sh  seed_bundle.go  seed_bundle.py  train_from_eval.sh  train_from_session.sh
(+333 files in other folders)
