[project]
name = "aikdm"
version = "0.1.0"
description = "Prompt-generation and evaluation toolkit (alpha agent generation)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "click>=8.1.7",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "google-adk>=0.4",
  "litellm>=1.50",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-mock>=3.12",
  "pytest-snapshot>=0.9",
  "ruff>=0.6",
]

[project.scripts]
aikdm = "aikdm.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["aikdm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
